fix add query
